tests/sumo/errors/routes/stops/testsuite.sumo
waypoint_speed_invalid
index_invalid
duration_invalid
until_invalid
false_edge
